Intento de actividad drag and drop

--- a/05.html
+++ b/05.html
@@ -68,6 +68,9 @@
 					"dinosaurios",
 					"Respuesta para desorientar",
 					"agua",
+					"pequeño",
+					"poderoso",
+					"valiente",
 				],
 				oraciones: [ // En texto debería estar esta parte [[]] en donde irá la opción
 					{
@@ -85,6 +88,10 @@
 					{
 						texto: "El cuerpo humano necesita [[]] para vivir.",
 						respuesta: "agua",
+					},
+					{
+						texto: "Oing es el más [[]]",
+						respuesta: "valiente",
 					},
 				],
 				contenido: [
