Se agrega ejemplo de cuestionario

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 				div: "contenidoCurso",
 				contenido: [
 					{
-						titulo: "Bicha",
+						titulo: "nombre de la diapositiva",
 						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
                         posicionImagen: "derecha", // derecha, izquierda, arriba, abajo
                         bordeImagen: "15px",
                         // alto: 2,
                         // ancho: 2,
-						texto: "Este será el contenido 1 de bicha."
+						texto: "Este será el contenido 1 de nombre de la diapositiva."
 					},
 					{
 						titulo: "Rino",
@@ -82,12 +82,12 @@
 						texto: "Rino estuvo aquí."
 					},
 					{
-						titulo: "Oing",
+						titulo: "Html",
 						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
                         posicionImagen: "arriba", // derecha, izquierda, arriba, abajo
                         // alto: 2,
                         // ancho: 2,
-						texto: "Oing es el más fuerte."
+						texto: "Html es el más fuerte."
 					},
 					{
 						titulo: "Sección 4",
