--- a/04.html
+++ b/04.html
@@ -4,108 +4,111 @@
 <!--[if IE 9]><html class="ie9" lang="en"><![endif]-->
 <!--[if !IE]><!-->
 <html lang="en">
-	<!--<![endif]-->
-	<!-- start: HEAD -->
-	<head>
-		<title>Primera página</title>
-		<!-- start: META -->
-		<!--[if IE]><meta http-equiv='X-UA-Compatible' content="IE=edge,IE=9,IE=8,chrome=1" /><![endif]-->
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<meta content="" name="description" />
-		<meta content="" name="author" />
-        <link rel="stylesheet" href="assets/css/estilo_subitus.css">
-		<!-- end: META -->
-		<!-- start: GOOGLE FONTS -->
-		<link href="assets/css/fonsGoogle.css" rel="stylesheet" type="text/css" />
-        <script src="assets/alertify/alertify.min.js"></script>
-        <link rel="stylesheet" href="assets/alertify/css/alertify.min.css">
-        <link rel="stylesheet" href="assets/alertify/css/themes/default.min.css">
-		<!-- end: GOOGLE FONTS -->
-		<!-- start: MAIN CSS -->
-		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-		<link rel="stylesheet" href="bower_components/themify-icons/themify-icons.css">
-		<link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
-		<link rel="stylesheet" href="bower_components/perfect-scrollbar/css/perfect-scrollbar.min.css">
-		<link rel="stylesheet" href="bower_components/switchery/dist/switchery.min.css">
-		<link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css">
-		<link rel="stylesheet" href="bower_components/ladda/dist/ladda-themeless.min.css">
-		<link rel="stylesheet" href="bower_components/slick.js/slick/slick.css">
-		<link rel="stylesheet" href="bower_components/slick.js/slick/slick-theme.css">
-		<!-- end: MAIN CSS -->
-		<!-- start: CSS REQUIRED FOR THIS PAGE ONLY -->
-		<!-- end: CSS REQUIRED FOR THIS PAGE ONLY -->
-		<!-- start: Packet CSS -->
-		<link rel="stylesheet" href="assets/css/styles.css">
-		<link rel="stylesheet" href="assets/css/plugins.css">
-		<link rel="stylesheet" href="assets/css/themes/lyt1-theme-1.css" id="skin_color">
-		<!-- end: Packet CSS -->
-		<!-- Favicon -->
-		<link rel="shortcut icon" href="favicon.ico" />
-	</head>
-	<!-- end: HEAD -->
-	<body onUnload="end()">
-		<div id="app">
-			<div id="sidebar" class="sidebar app-aside"></div>
-			<div id="app-content" class="app-content"></div>
-		</div>
-		<div id="mymodal"></div>
-		<script src="bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="scripts/config.js"></script>
-		<script src="scripts/template.js"></script>
-		<script>
-			imprimirCabecera();
-			diapositiva = {
-				tipo: "accordion__", // flip-card, accordion, horizontal-tabs, vertical-tabs
-				titulo: "Acordeón",
-				div: "contenidoCurso",
-				contenido: [
-					{
-						titulo: "Bicha",
-						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
-                        posicionImagen: "derecha", // derecha, izquierda, arriba, abajo
-                        // alto: 2,
-                        // ancho: 2,
-						texto: "Este será el contenido 1 de bicha."
-					},
-					{
-						titulo: "Rino",
-						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
-                        posicionImagen: "izquierda", // derecha, izquierda, arriba, abajo
-                        // alto: 2,
-                        // ancho: 2,
-						texto: "Rino estuvo aquí."
-					},
-					{
-						titulo: "Oing",
-						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
-                        posicionImagen: "arriba", // derecha, izquierda, arriba, abajo
-                        // alto: 2,
-                        // ancho: 2,
-						texto: "Oing es el más fuerte."
-					},
-					{
-						titulo: "Sección 4",
-						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
-                        posicionImagen: "abajo", // derecha, izquierda, arriba, abajo
-                        // alto: 2,
-                        ancho: 60,
-						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
-					},
-					{
-						titulo: "Sección 5",
-						imagen: "https://www.hazunaweb.com/imagenes/prueba.jpg",
-                        posicionImagen: "derecha", // derecha, izquierda, arriba, abajo
-                        alto: "50%",
-                        // ancho: 2,
-						texto: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
-					},
-				],
-			};
-			imprimirPieDePagina();
-		</script>
-	</body>
+<!--<![endif]-->
+<!-- start: HEAD -->
+
+<head>
+    <title>Primera página</title>
+    <!-- start: META -->
+    <!--[if IE]><meta http-equiv='X-UA-Compatible' content="IE=edge,IE=9,IE=8,chrome=1" /><![endif]-->
+    <meta charset="utf-8" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta content="" name="description" />
+    <meta content="" name="author" />
+    <link rel="stylesheet" href="assets/css/estilo_subitus.css">
+    <!-- end: META -->
+    <!-- start: GOOGLE FONTS -->
+    <link href="assets/css/fonsGoogle.css" rel="stylesheet" type="text/css" />
+    <script src="assets/alertify/alertify.min.js"></script>
+    <link rel="stylesheet" href="assets/alertify/css/alertify.min.css">
+    <link rel="stylesheet" href="assets/alertify/css/themes/default.min.css">
+    <!-- end: GOOGLE FONTS -->
+    <!-- start: MAIN CSS -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
+    <link rel="stylesheet" href="bower_components/perfect-scrollbar/css/perfect-scrollbar.min.css">
+    <link rel="stylesheet" href="bower_components/switchery/dist/switchery.min.css">
+    <link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css">
+    <link rel="stylesheet" href="bower_components/ladda/dist/ladda-themeless.min.css">
+    <link rel="stylesheet" href="bower_components/slick.js/slick/slick.css">
+    <link rel="stylesheet" href="bower_components/slick.js/slick/slick-theme.css">
+    <!-- end: MAIN CSS -->
+    <!-- start: CSS REQUIRED FOR THIS PAGE ONLY -->
+    <!-- end: CSS REQUIRED FOR THIS PAGE ONLY -->
+    <!-- start: Packet CSS -->
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/plugins.css">
+    <link rel="stylesheet" href="assets/css/themes/lyt1-theme-1.css" id="skin_color">
+    <!-- end: Packet CSS -->
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.ico" />
+</head>
+<!-- end: HEAD -->
+
+<body onUnload="end()">
+    <div id="app">
+        <div id="sidebar" class="sidebar app-aside"></div>
+        <div id="app-content" class="app-content"></div>
+    </div>
+    <div id="mymodal"></div>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="scripts/config.js"></script>
+    <script src="scripts/template.js"></script>
+    <script>
+        imprimirCabecera();
+        diapositiva = {
+            tipo: "cuestionario", // flip-card, accordion, horizontal-tabs, vertical-tabs, completar-palabra, cuestionario
+            titulo: "Cuestionario",
+            div: "contenidoCurso",
+            preguntas: [
+                {
+                    texto: "Elija la segunda respuesta",
+                    opciones: [
+                        'Primera',
+                        'Segunda',
+                        'Tercera',
+                    ],
+                    respuesta: "Segunda",
+                },
+                {
+                    texto: "Elija la primera respuesta",
+                    opciones: [
+                        'Primera',
+                        'Segunda',
+                        'Tercera',
+                        'Cuarta',
+                    ],
+                    respuesta: "Primera",
+                },
+                {
+                    texto: "Elija la tercera respuesta",
+                    opciones: [
+                        'Primera',
+                        'Segunda',
+                        'Tercera',
+                        'Cuarta',
+                    ],
+                    respuesta: "Tercera",
+                },
+                {
+                    texto: "Elija la cuarta respuesta",
+                    opciones: [
+                        'Primera',
+                        'Segunda',
+                        'Tercera',
+                        'Cuarta',
+                    ],
+                    respuesta: "Cuarta",
+                },
+            ],
+        };
+        imprimirPieDePagina();
+    </script>
+</body>
+
 </html>
