--- a/04.html
+++ b/04.html
@@ -47,10 +47,12 @@
     <!-- end: Packet CSS -->
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300&display=swap" rel="stylesheet">
 </head>
 <!-- end: HEAD -->
 
 <body onUnload="end()">
+    <div id="progress"></div>
     <div id="app">
         <div id="sidebar" class="sidebar app-aside"></div>
         <div id="app-content" class="app-content"></div>
@@ -60,6 +62,7 @@
     <script src="scripts/config.js"></script>
     <script src="scripts/template.js"></script>
     <script>
+        imprimirProgressBar();
         imprimirCabecera();
         diapositiva = {
             tipo: "cuestionario", // flip-card, accordion, horizontal-tabs, vertical-tabs, completar-palabra, cuestionario
