--- a/04.html
+++ b/04.html
@@ -47,7 +47,7 @@
     <!-- end: Packet CSS -->
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Oswald:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald:300&display=swap" rel="stylesheet">
 </head>
 <!-- end: HEAD -->
 
