--- a/05.html
+++ b/05.html
@@ -45,9 +45,11 @@
 		<!-- end: Packet CSS -->
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="favicon.ico" />
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald:300&display=swap" rel="stylesheet">
 	</head>
 	<!-- end: HEAD -->
 	<body onUnload="end()">
+			<div id="progress"></div>
 		<div id="app">
 			<div id="sidebar" class="sidebar app-aside"></div>
 			<div id="app-content" class="app-content"></div>
@@ -57,6 +59,7 @@
 		<script src="scripts/config.js"></script>
 		<script src="scripts/template.js"></script>
 		<script>
+			imprimirProgressBar();
 			imprimirCabecera();
 			diapositiva = {
 				tipo: "completar-palabra", // flip-card, accordion, horizontal-tabs, vertical-tabs, completar-palabra
@@ -123,7 +126,7 @@
 					},
 				],
 			};
-			imprimirPieDePagina();
+			imprimirPieDePaginaDrag();
 		</script>
 	</body>
 </html>
